--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.15.2",
+    "moment": "^2.18.1",
     "path": "^0.12.7",
     "socket.io": "^1.7.3"
   },
